--- a/haze.html
+++ b/haze.html
@@ -44,8 +44,8 @@
 	<li class="dropdown-top">
 	<a class="dropdown-top" href="members.html">Сотрудники</a>
 	<ul class="dropdown-inside"id="i1">
-	<li><a href="ИльяКравец.html">Илья Кравец</a></li>
-	<li><a href="АлександрБабиков.html">Александр Бабиков</a></li>
+	<li><a href="404.html">Илья Кравец</a></li>
+	<li><a href="404.html">Александр Бабиков</a></li>
 	</ul>
 	</li>
 	</ul>
@@ -91,6 +91,13 @@ The Haze - наилучшая игра, разрабатываемая Shape GD 
  </div>
  </center>
 </p>
+<div class="Links">
+<a href="http://vk.com/shape_game_developmen"><img height="25px"  src="content/vk.png"></a>
+<br>
+<a href="https://www.facebook.com"><img height="25px" src="content/fb.png"></a>
+<br>
+<a href="https://twitter.com"><img height="25px" src="content/tw.png"></a>
+</div>
 <footer class="footer" >
 &#174;Shape General Development
 </footer>
