--- a/members.html
+++ b/members.html
@@ -8,7 +8,7 @@
 <script async src="js/script.js"></script><!-- //подключение скриптов -->
 <BODY TEXT=#B204F1 class="content-background" ><!-- //тело -->
 <div class="header">
-<h1>Сотрудники Shape GD</h1><!-- //шапка страницы -->
+<h1>Команда Shape GD</h1><!-- //шапка страницы -->
 <TABLE width="100%" height="10" class="menu"> <!-- //меню с выпадающими списками -->
 <TR>
 <Td height="5%" width="15%"><!-- //главная -->
@@ -44,8 +44,8 @@
 	<li class="dropdown-top">
 	<a class="dropdown-top" href="/">Сотрудники</a>
 	<ul class="dropdown-inside" id="i1">
-	<li><a href="ИльяКравец.html">Илья Кравец</a></li>
-	<li><a href="АлександрБабиков.html">Александр Бабиков</a></li>
+	<li><a href="404.html">Илья Кравец</a></li>
+	<li><a href="404.html">Александр Бабиков</a></li>
 	</ul>
 	</li>
 	</ul>
@@ -61,6 +61,13 @@
 <br>
 <div>
 <button>Подать Заявку</button>
+</div>
+<div class="Links">
+<a href="http://vk.com/shape_game_developmen"><img height="25px"  src="content/vk.png"></a>
+<br>
+<a href="https://www.facebook.com"><img height="25px" src="content/fb.png"></a>
+<br>
+<a href="https://twitter.com"><img height="25px" src="content/tw.png"></a>
 </div>
 <footer class="footer">
 &#174;Shape General Development
