--- a/404.html
+++ b/404.html
@@ -44,8 +44,8 @@
 	<li class="dropdown-top">
 	<a class="dropdown-top" href="members.html">Сотрудники</a>
 	<ul class="dropdown-inside" id="i1">
-	<li><a href="ИльяКравец.html">Илья Кравец</a></li>
-	<li><a href="АлександрБабиков.html">Александр Бабиков</a></li>
+	<li><a href="404.html">Илья Кравец</a></li>
+	<li><a href="404.html">Александр Бабиков</a></li>
 	</ul>
 	</li>
 	</ul>
@@ -66,6 +66,13 @@
 <IMG SRC ="content/ups.png" width="500">
 </div>
 </p>
+<div class="Links">
+<a href="http://vk.com/shape_game_developmen"><img height="25px"  src="content/vk.png"></a>
+<br>
+<a href="https://www.facebook.com"><img height="25px" src="content/fb.png"></a>
+<br>
+<a href="https://twitter.com"><img height="25px" src="content/tw.png"></a>
+</div>
 <footer class="footer">
 &#174;Shape General Development
 </footer>
