--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
 	<li class="dropdown-top">
 	<a class="dropdown-top" href="members.html">Сотрудники</a>
 	<ul class="dropdown-inside"id="i1" >
-	<li><a href="ИльяКравец.html">Илья Кравец</a></li>
-	<li><a href="АлександрБабиков.html">Александр Бабиков</a></li>
+	<li><a href="404.html">Илья Кравец</a></li>
+	<li><a href="404.htmll">Александр Бабиков</a></li>
 	</ul>
 	</li>
 	</ul>
@@ -88,9 +88,13 @@
 Мы так же будем рады вашей благотворительности на развите проекта.
 <!-- <IMG SRC ="art-природа-480664.jpg" width="100%"> -->
 </div>
-
-
-
+<div class="Links">
+<a href="http://vk.com/shape_game_developmen"><img height="25px"  src="content/vk.png"></a>
+<br>
+<a href="https://www.facebook.com"><img height="25px" src="content/fb.png"></a>
+<br>
+<a href="https://twitter.com"><img height="25px" src="content/tw.png"></a>
+</div>
 <footer class="footer">
 &#174;Shape General Development
 </footer>
