--- a/404.html
+++ b/404.html
@@ -52,7 +52,7 @@
 </Td> 
 <TD height="5%" width="15%"><!-- //авторизация -->
 	<ul class="dropdown">
-	<li class="dropdown-top"><a class="dropdown-top" href="Авторизация.html">Авторизация</a></li>
+	<li class="dropdown-top"><a class="dropdown-top" href="login.html">Авторизация</a></li>
 	</ul>
 </TD>
 </TR>
