--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 <BODY TEXT=#B204F1 class="content-background" ><!-- //тело -->
 <div class="header"><!-- //шапка страницы -->
 <div>
+<a href="index.html">
 <IMG SRC ="content/DVaMhBBzt1s.png"  HEIGHT="120" class = "Embl"><!-- //эмблема -->
+</a>
 </div>
 <div class="search" >
 <form method="get" action="/search" target="_blank">
